Changed naming in the locale

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,17 +1,17 @@
 # English strings go here for Rails i18n
 en:
-  label_canned_response: Canned response
-  label_canned_response_plural: Canned responses
-  label_global_canned_responses: Global canned responses
-  label_canned_response_view_all: View all canned responses
-  label_canned_response_view_global: View global canned responses
-  label_manage_canned_responses: Manage canned responses
-  label_new_canned_response: New canned response
-  label_new_global_canned_response: New global canned response
-  label_edit_canned_response: Edit canned response
+  label_canned_response: Issue Text Template
+  label_canned_response_plural: Issue text templates
+  label_global_canned_responses: Global text templates
+  label_canned_response_view_all: View all text templates
+  label_canned_response_view_global: View global text templates
+  label_manage_canned_responses: Manage text templates
+  label_new_canned_response: New text template
+  label_new_global_canned_response: New global text template
+  label_edit_canned_response: Edit text template
   field_canned_response_title: Title
-  field_canned_response_text: Response text
+  field_canned_response_text: Templete text
   notice_canned_response_created: Canned successfully
   notice_canned_response_updated: Re-canned successfully
-  notice_canned_response_deleted: Can trashed successfully
-  label_insert_canned_response: Insert canned response
+  notice_canned_response_deleted: Template trashed successfully
+  label_insert_canned_response: Insert text template
